# dotfiles-gentoo

./: Cargo.toml  Dockerfile  build.sh  run.sh  test.sh
src/: lib.rs  main.rs
src/dotfiles/: config.rs  file.rs  mod.rs  shell.rs
test_assets/: default_config.toml  stored_config.toml  test.toml  test_binary  test_config.toml
