[package]
name = "dotfiles"
version = "0.1.0"
authors = ["Austin Rivas <austinrivas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
dirs = "^2.0.2"
nix = "^0.17.0"
rust-embed="^5.5.1"
serde = { version = "1.0.110", features = ["derive"] }